Linked overriden object cannot be made local (if it has a parent in the sourcefile) #111439

Closed
opened 2023-08-23 16:27:12 +02:00 by Philipp Oeser · 4 comments
Member

System Information
Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI
Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-23 12:53, hash: d73247857469
Worked: never

Short description of error
Linked overridden object cannot be made local (if it has a parent in the sourcefile)

Exact steps for others to reproduce the error

  • open main_parent_relationships.blend
  • (two cubes were linked from src_parent_relationships.blend, one has a parent there)
  • (both have had a library override made via Object > Library Override > Make)
  • select Cube_unparented
  • Object > Relations > Make Local > Selected Objects : Cube is now properly all local
  • select Cube_parented
  • Object > Relations > Make Local > Selected Objects : nothing happened

This might be a limitation, in such case we should at least give some sort of feedback why this is not a feasible thing to do?

**System Information** Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-23 12:53, hash: `d73247857469` Worked: never **Short description of error** Linked overridden object cannot be made local (if it has a parent in the sourcefile) **Exact steps for others to reproduce the error** - open `main_parent_relationships.blend` - (two cubes were linked from `src_parent_relationships.blend`, one has a parent there) - (both have had a library override made via `Object` > `Library Override` > `Make`) - select `Cube_unparented` - `Object` > `Relations` > `Make Local` > `Selected Objects` : Cube is now properly all local - select `Cube_parented` - `Object` > `Relations` > `Make Local` > `Selected Objects` : nothing happened This might be a limitation, in such case we should at least give some sort of feedback why this is not a feasible thing to do?
Philipp Oeser added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-08-23 16:27:13 +02:00
Philipp Oeser added
Status
Confirmed
Module
Core
Interest
Overrides
and removed
Status
Needs Triage
labels 2023-08-23 16:30:27 +02:00
Bastien Montagne added
Type
Bug
and removed
Type
Report
labels 2023-08-23 17:12:28 +02:00

It works from the Outliner, but not the 3DView... no idea why, most likely some over-zealous poll function or some other check.

It works from the Outliner, but not the 3DView... no idea why, most likely some over-zealous poll function or some other check.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-23 17:28:05 +02:00
Author
Member

@mont29 : can we add #111439 / 110eb666ca to LTS?

@mont29 : can we add #111439 / 110eb666cadc1e84746035417a58065f4819c8e5 to LTS?

@lichtwerk think it is safe enough yes

@lichtwerk think it is safe enough yes
Author
Member

done

done
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111439
No description provided.